--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.all-themes-1.0.10.jar=all-themes-1.0.10.jar
 file.reference.mysql-connector-java-5.1.46.jar=C:\\Users\\LEONID\\Documents\\NetBeansProjects\\AulaVirtualB\\mysql-connector-java-5.1.46.jar
 includes=**
 j2ee.compile.on.save=true
@@ -48,7 +49,8 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.mysql-connector-java-5.1.46.jar}:\
-    ${libs.primefaces.classpath}
+    ${libs.primefaces.classpath}:\
+    ${file.reference.all-themes-1.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
